--- a/frontend/pacman-route.yaml
+++ b/frontend/pacman-route.yaml
@@ -7,8 +7,8 @@ spec:
   to:
     kind: Service
     name: pacman
-  #port:
-  #  targetPort: 80
+  port:
+    targetPort: 80
   tls:
     termination: edge
     insecureEdgeTerminationPolicy: Redirect
