--- a/kustomization/base/pacman-route.yaml
+++ b/kustomization/base/pacman-route.yaml
@@ -1,7 +1,9 @@
-apiVersion: v1
+apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   name: pacman
+  labels:
+    app.kubernetes.io/name: pacman
 spec:
   path: "/"
   to:
