--- a/kustomization/base/pacman-f5-route.yaml
+++ b/kustomization/base/pacman-f5-route.yaml
@@ -1,12 +1,12 @@
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
-  name: f5-pacman
+  name: f5-gslb-pacman
   labels:
-    app.kubernetes.io/name: f5-pacman
+    app.kubernetes.io/name: f5-gslb-pacman
 spec:
   # Added for f5 demonstration
-  host: pacman-pacman-app.www-apps-juliet.juliet-alpha.demo.red-chesterfield.com
+  host: pacman-pacman-app.www-apps.juliet.demo.red-chesterfield.com
   path: "/"
   to:
     kind: Service
