Enable hostNetwork to get cloud statistics back

--- a/kustomization/base/pacman-deployment.yaml
+++ b/kustomization/base/pacman-deployment.yaml
@@ -11,6 +11,7 @@ spec:
       labels:
         name: pacman
     spec:
+      hostNetwork: true
       containers:
       - image: pacman:latest
         name: pacman
