Switch to a customized pacman image

--- a/kustomization/base/pacman-deployment.yaml
+++ b/kustomization/base/pacman-deployment.yaml
@@ -12,7 +12,7 @@ spec:
         name: pacman
     spec:
       containers:
-      - image: pacman:latest
+      - image: quay.io/jpacker/nodejs-pacman-app:latest
         name: pacman
         ports:
         - containerPort: 8080
