--- a/deploy/pacman-app.yaml
+++ b/deploy/pacman-app.yaml
@@ -33,6 +33,7 @@ apiVersion: apps.open-cluster-management.io/v1
 kind: Subscription
 metadata:
   annotations:
+    apps.open-cluster-management.io/git-branch: main
     apps.open-cluster-management.io/github-path: kustomization
   name: pacman-app
   namespace: pacman-app
