--- a/kustomization/ansiblejobs/f5-update-dns-load-balancer.yaml
+++ b/kustomization/ansiblejobs/f5-update-dns-load-balancer.yaml
@@ -2,7 +2,7 @@
 apiVersion: tower.ansible.com/v1alpha1
 kind: AnsibleJob
 metadata:
-  generateName: f5-update-dns-load-balancer
+  generateName: f5-update-dns-load-balancer-
   labels:
     app.kubernetes.io/name: pacman
 spec:
@@ -10,6 +10,5 @@ spec:
   job_template_name: f5-update-dns-load-balancer
   extra_vars:
     target_clusters:
-      - juliet-charlie
-      - juliet-alpha
-      - juliet-bravo
+      - charlie-zulu
+      - charlie-yankee
